# SignalTranslatorDemo

./: CMakeLists.txt  main.cpp  signal.grammar
include/: AsmCodeGenerator.h  GraphTree.h  Lexer.h  Parser.h  SemanticChecker.h  SyntaxTree.h  errors.h  grammar.h  utils.h
src/: AsmCodeGenerator.cpp  GraphTree.cpp  Lexer.cpp  SemanticChecker.cpp  SyntaxTree.cpp  errors.cpp  utils.cpp
tests/: lexerError1.signal  lexerError2.signal  test.signal  test1.signal  test2-1.signal  test2-2.signal  test2-3.signal  test2-4.signal  test2-5.signal  test3-1.signal  test3-2.signal  test3-3.signal
